[project]
name = "flexparser"
authors = [
  {name="Hernan E. Grecco", email="hernan.grecco@gmail.com"}
]
license = {text = "BSD-3-Clause"}
description = "Parsing made fun ... using typing."
readme = "README.rst"
maintainers = [
  {name="Hernan E. Grecco", email="hernan.grecco@gmail.com"},
]
keywords = ["parser", "code", "parsing", "source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.package-data]
flexparser = ["py.typed"]

[project.urls]
Homepage = "https://github.com/hgrecco/flexparser"

[tool.setuptools]
packages = ["flexparser"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.test = {file = "requirements.test.txt"}

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party= ["flexparser"]

[tool.ruff.lint]
extend-select = [
  "I",           # isort
]
ignore = [
  # whitespace before ':' - doesn't work well with black
  # "E203",
  "E402",
  # line too long - let black worry about that
  "E501",
  # do not assign a lambda expression, use a def
  "E731",
  # line break before binary operator
  # "W503"
]

[tool.ruff]
extend-exclude = ["build"]
line-length=88
