[metadata]
name = flexparser
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = Parsing made fun ... using typing.
long_description = file: README.rst
keywords = parser, code, parsing, source
url = https://github.com/hgrecco/flexparser
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: System :: Filesystems
    Topic :: Software Development
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = flexparser
zip_safe = True
include_package_data = True
python_requires = >=3.8

setup_requires =
    setuptools
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[tool:pytest]
addopts = --pyargs

[isort]
default_section=THIRDPARTY
known_first_party=flexparser
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[zest.releaser]
python-file-with-version = version.py
